{
  "version": 4,
  "terraform_version": "1.2.1",
  "serial": 151,
  "lineage": "bbeacc06-00c5-697d-323f-6bfd69084c5c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_vpc10",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366345536155:internet-gateway/igw-08e60b77ef301e6fc",
            "id": "igw-08e60b77ef301e6fc",
            "owner_id": "366345536155",
            "tags": {
              "Name": "igw_vpc10"
            },
            "tags_all": {
              "Name": "igw_vpc10"
            },
            "vpc_id": "vpc-0ad4b5ebf0b93dfdc"
          },
          "dependencies": [
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "elb_ws",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:366345536155:loadbalancer/app/elb-ws/aa52dd5c00dc1f9c",
            "arn_suffix": "app/elb-ws/aa52dd5c00dc1f9c",
            "desync_mitigation_mode": "defensive",
            "dns_name": "elb-ws-209680449.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:366345536155:loadbalancer/app/elb-ws/aa52dd5c00dc1f9c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "elb-ws",
            "security_groups": [
              "sg-0d1e741fd6e49a4e9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a95ad14df9dca83b"
              },
              {
                "subnet_id": "subnet-0f2064b556c8866cf"
              }
            ],
            "subnets": [
              "subnet-0a95ad14df9dca83b",
              "subnet-0f2064b556c8866cf"
            ],
            "tags": {
              "Name": "elb_ws"
            },
            "tags_all": {
              "Name": "elb_ws"
            },
            "vpc_id": "vpc-0ad4b5ebf0b93dfdc",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.sg_vpc10_pub",
            "aws_subnet.sn_vpc10_pub_1a",
            "aws_subnet.sn_vpc10_pub_1c",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener_elb_ws",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:366345536155:listener/app/elb-ws/aa52dd5c00dc1f9c/38c7ad1e9e450389",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:366345536155:targetgroup/tg-elb-ws/6335cf14622cf553",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:366345536155:listener/app/elb-ws/aa52dd5c00dc1f9c/38c7ad1e9e450389",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:366345536155:loadbalancer/app/elb-ws/aa52dd5c00dc1f9c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.elb_ws",
            "aws_lb_target_group.tg_elb_ws",
            "aws_security_group.sg_vpc10_pub",
            "aws_subnet.sn_vpc10_pub_1a",
            "aws_subnet.sn_vpc10_pub_1c",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg_elb_ws",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:366345536155:targetgroup/tg-elb-ws/6335cf14622cf553",
            "arn_suffix": "targetgroup/tg-elb-ws/6335cf14622cf553",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:366345536155:targetgroup/tg-elb-ws/6335cf14622cf553",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg-elb-ws",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "tg_elb_ws"
            },
            "tags_all": {
              "Name": "tg_elb_ws"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0ad4b5ebf0b93dfdc"
          },
          "dependencies": [
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Private_Route_Table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366345536155:route-table/rtb-062ea8614e85dcc65",
            "id": "rtb-062ea8614e85dcc65",
            "owner_id": "366345536155",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private_Route_Table"
            },
            "tags_all": {
              "Name": "Private_Route_Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad4b5ebf0b93dfdc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public_Route_Table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366345536155:route-table/rtb-04f1a1d437aa1299a",
            "id": "rtb-04f1a1d437aa1299a",
            "owner_id": "366345536155",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08e60b77ef301e6fc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public_Route_Table"
            },
            "tags_all": {
              "Name": "Public_Route_Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad4b5ebf0b93dfdc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_vpc10",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Assoc_1_Pub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ff8ed06da43198c",
            "route_table_id": "rtb-04f1a1d437aa1299a",
            "subnet_id": "subnet-0a95ad14df9dca83b"
          },
          "dependencies": [
            "aws_internet_gateway.igw_vpc10",
            "aws_route_table.Public_Route_Table",
            "aws_subnet.sn_vpc10_pub_1a",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Assoc_1_Pub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cff97c225bfe0633",
            "route_table_id": "rtb-04f1a1d437aa1299a",
            "subnet_id": "subnet-0f2064b556c8866cf"
          },
          "dependencies": [
            "aws_internet_gateway.igw_vpc10",
            "aws_route_table.Public_Route_Table",
            "aws_subnet.sn_vpc10_pub_1c",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Assoc_2_Priv_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0922d93a3112e7213",
            "route_table_id": "rtb-062ea8614e85dcc65",
            "subnet_id": "subnet-0b8a185a6a675b7e6"
          },
          "dependencies": [
            "aws_route_table.Private_Route_Table",
            "aws_subnet.sn_vpc10_priv_1a",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Assoc_2_Priv_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9b64db0eb1fb81b",
            "route_table_id": "rtb-062ea8614e85dcc65",
            "subnet_id": "subnet-05cb5efd521631996"
          },
          "dependencies": [
            "aws_route_table.Private_Route_Table",
            "aws_subnet.sn_vpc10_priv_1c",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_vpc10_priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366345536155:security-group/sg-06860000b321625af",
            "description": "Grupo de Seguranca Private Network",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All to All",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06860000b321625af",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "All from 10.0.0.0/16",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Private_Security_Group",
            "name_prefix": "",
            "owner_id": "366345536155",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_vpc10_priv"
            },
            "tags_all": {
              "Name": "sg_vpc10_priv"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad4b5ebf0b93dfdc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_vpc10_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366345536155:security-group/sg-0d1e741fd6e49a4e9",
            "description": "Grupo de Seguranca Public Network",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All to All",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d1e741fd6e49a4e9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TCP/22 from All",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TCP/80 from All",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "All from 10.0.0.0/16",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Public_Security_Group",
            "name_prefix": "",
            "owner_id": "366345536155",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_vpc10_pub"
            },
            "tags_all": {
              "Name": "sg_vpc10_pub"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad4b5ebf0b93dfdc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_vpc10_priv_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366345536155:subnet/subnet-0b8a185a6a675b7e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8a185a6a675b7e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "366345536155",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn_vpc10_priv_1a"
            },
            "tags_all": {
              "Name": "sn_vpc10_priv_1a"
            },
            "vpc_id": "vpc-0ad4b5ebf0b93dfdc"
          },
          "dependencies": [
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_vpc10_priv_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366345536155:subnet/subnet-05cb5efd521631996",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05cb5efd521631996",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "366345536155",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn_vpc10_priv_1c"
            },
            "tags_all": {
              "Name": "sn_vpc10_priv_1c"
            },
            "vpc_id": "vpc-0ad4b5ebf0b93dfdc"
          },
          "dependencies": [
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_vpc10_pub_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366345536155:subnet/subnet-0a95ad14df9dca83b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a95ad14df9dca83b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "366345536155",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn_vpc10_pub_1a"
            },
            "tags_all": {
              "Name": "sn_vpc10_pub_1a"
            },
            "vpc_id": "vpc-0ad4b5ebf0b93dfdc"
          },
          "dependencies": [
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_vpc10_pub_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366345536155:subnet/subnet-0f2064b556c8866cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f2064b556c8866cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "366345536155",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn_vpc10_pub_1c"
            },
            "tags_all": {
              "Name": "sn_vpc10_pub_1c"
            },
            "vpc_id": "vpc-0ad4b5ebf0b93dfdc"
          },
          "dependencies": [
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc10",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366345536155:vpc/vpc-0ad4b5ebf0b93dfdc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-034675717ca9e7591",
            "default_route_table_id": "rtb-0bda96cdb55c7c623",
            "default_security_group_id": "sg-0a9b883c027e328dd",
            "dhcp_options_id": "dopt-04a2a8fb71e213c08",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ad4b5ebf0b93dfdc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bda96cdb55c7c623",
            "owner_id": "366345536155",
            "tags": {
              "Name": "vpc10"
            },
            "tags_all": {
              "Name": "vpc10"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "vpc_ep_vpc10",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366345536155:vpc-endpoint/vpce-04c17369e6ec2159d",
            "id": "vpce-04c17369e6ec2159d",
            "owner_id": "366345536155",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d1e741fd6e49a4e9"
            ],
            "service_name": "com.amazonaws.us-east-1.sns",
            "state": "available",
            "tags": {
              "Name": "vpc_ep_vpc10"
            },
            "tags_all": {
              "Name": "vpc_ep_vpc10"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ad4b5ebf0b93dfdc"
          },
          "dependencies": [
            "aws_security_group.sg_vpc10_pub",
            "aws_vpc.vpc10"
          ]
        }
      ]
    }
  ]
}